# nbvplanner

./: .gitignore  README.md  nbvp.rosinstall
interface_nbvp_rotors/: CMakeLists.txt  CMakeLists.txt.user.debb466  package.xml
interface_nbvp_rotors/launch/nbvp/: nbvp_facility_a.launch  nbvp_facility_b.launch  nbvp_facility_c.launch  nbvp_maze.launch  nbvp_office_b.launch  nbvp_office_c.launch
interface_nbvp_rotors/launch/octomap_launch/: octomap_server.launch
interface_nbvp_rotors/launch/scenes/: nbvp1_old_maze.launch  nbvp_maze2_pres.launch
interface_nbvp_rotors/resource/: avm710.yaml  avm713.yaml  avm854.yaml  avm_facility1.yaml  facility.yaml  maze.yaml  office_c.yaml  platform_a.yaml  pp.yaml  stabilizer.yaml  unity_office.yaml
interface_nbvp_rotors/src/: exploration.cpp  polytraj.cpp  polytraj.h
nbvplanner/: CMakeLists.txt  package.xml
nbvplanner/data/2021_12_8_15_57_45/: tree0.txt
nbvplanner/data/2021_12_8_16_5_16/: response.txt  tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt
nbvplanner/data/2021_12_8_16_6_18/: tree0.txt  tree1.txt
nbvplanner/data/2021_12_8_16_7_23/: response.txt  tree0.txt  tree1.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt
nbvplanner/data/2021_4_13_13_10_57/: response.txt
nbvplanner/data/2021_4_13_13_15_16/: response.txt
nbvplanner/data/2021_4_13_13_18_4/: response.txt
nbvplanner/data/2021_4_13_13_35_12/: response.txt
nbvplanner/data/2021_4_13_13_4_29/: response.txt
nbvplanner/data/2021_4_13_13_5_57/: response.txt
nbvplanner/data/2021_4_13_13_9_37/: response.txt
nbvplanner/data/2021_4_13_14_11_3/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  tree33.txt  tree34.txt  tree35.txt  tree36.txt  tree37.txt  tree38.txt  tree39.txt  tree4.txt  tree40.txt  tree41.txt  tree42.txt  (+22 more)
nbvplanner/data/2021_4_13_14_4_40/: response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree2.txt  tree3.txt  tree4.txt  tree5.txt  tree6.txt  tree7.txt  tree8.txt  tree9.txt
nbvplanner/data/2021_4_13_15_45_18/: response.txt  tree0.txt  tree1.txt  tree2.txt
nbvplanner/data/2021_4_13_15_48_49/: response.txt
nbvplanner/data/2021_4_13_15_51_18/: path.txt  response.txt  tree0.txt  tree1.txt  tree10.txt  tree11.txt  tree12.txt  tree13.txt  tree14.txt  tree15.txt  tree16.txt  tree17.txt  tree18.txt  tree19.txt  tree2.txt  tree20.txt  tree21.txt  tree22.txt  tree23.txt  tree24.txt  tree25.txt  tree26.txt  tree27.txt  tree28.txt  tree29.txt  tree3.txt  tree30.txt  tree31.txt  tree32.txt  (+59 more)
nbvplanner/src/: nbvp.cpp  rrt.cpp
nbvplanner_old/: CMakeLists.txt  package.xml
nbvplanner_old/src/: nbv_planner_node.cpp
(+20926 files in other folders)
