<?xml version="1.0"?>
<package format="2">
  <name>nbvplanner</name>
  <version>0.0.0</version>
  <description>The nbvplanner package</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>ASL 2.0</license>

  <author>Andreas Bircher</author>

<buildtool_depend>catkin</buildtool_depend>
<buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>octomap_world</depend>
  <depend>octomap_msgs</depend>
  <depend>kdtree</depend>
  <depend>multiagent_collision_check</depend>
  
</package>
